<?xml version="1.0"?>
<package>
  <name>event_cluster_msgs</name>
  <version>0.0.0</version>
  <description>The event_cluster_msgs package</description>
  <maintainer email="jrodriguezg@us.es">Juan Pablo Rodriguez Gomez</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
</package>
